# open-browser-use

./: .gitignore  AGENT.md  Cargo.toml  DESIGN.md  LICENSE  LICENSE-THIRD-PARTY.md  PRODUCT.md  README.es.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  dist-workspace.toml  package.json  pnpm-lock.yaml  product-errors.json
crates/obu-host/: Cargo.toml  README.md
crates/obu-host/src/: cli.rs  coordinate_space.rs  diagnostics.rs  dispatcher.rs  error.rs  lib.rs  main.rs  methods.rs  native_messaging.rs  peer_lifecycle.rs  policy.rs  registry_lifecycle.rs  runtime_descriptor_lifecycle.rs  service_registry.rs  tab_state.rs  task_lifecycle.rs  task_store.rs  task_store_actor.rs
crates/obu-host/src/backends/: mod.rs
crates/obu-host/src/backends/cdp/: attach.rs  dialogs.rs  discovery.rs  dom_cua.rs  ensure_injected.rs  error.rs  execute.rs  injected_script.rs  mod.rs  oopif.rs  reconnect.rs  targets.rs  test_support.rs  transport.rs
crates/obu-host/src/backends/cdp/compose/: mod.rs  tab_goto.rs  tab_screenshot.rs
crates/obu-host/src/backends/cdp/cua/: mod.rs
crates/obu-host/src/backends/cdp/playwright/: mod.rs
crates/obu-host/src/backends/webext/: mod.rs  oopif.rs
crates/obu-host/src/ops/: action_point.rs  clipboard.rs  content_export.rs  cua.rs  dialogs.rs  dom_cua.rs  dom_cua_runtime.rs  event_wait.rs  keyboard.rs  mod.rs  point.rs  tab_navigation.rs
crates/obu-host/src/ops/playwright/: aria_prune.rs  handles.rs  mod.rs  runtime.rs
crates/obu-host/src/peer_auth/: allow_list.rs  mod.rs  unix.rs
crates/obu-host/src/socket/: accept_policy.rs  mod.rs  unix.rs
crates/obu-host/tests/: browser_control_core_fixtures.rs  cdp_backend_ops.rs  cdp_coordinate_hardening_e2e.rs  cdp_playwright_locator_click.rs  control_vocab_contract.rs  dispatcher_concurrency.rs  dispatcher_routing.rs  e2e_failure_modes.rs  e2e_node_repl_to_chromium.rs  e2e_node_repl_to_webextension.rs  method_name_sync.rs  native_messaging.rs  oopif_e2e.rs  peer_auth_unix.rs  service_registry.rs  socket_smoke.rs  task_rpc.rs  webext_bridge.rs  webext_default.rs
crates/obu-host/tests/common/: node_repl_mcp.rs
crates/obu-node-repl/: Cargo.toml  README.md
crates/obu-node-repl/embedded/: README.md  kernel.js  meriyah.umd.min.js
crates/obu-node-repl/resources/: js_tool_description.md
crates/obu-node-repl/src/: artifact_store.rs  cli.rs  diagnostics.rs  display_router.rs  lib.rs  main.rs  mcp_server.rs  reaper.rs  result_budget.rs  sdk_discovery.rs
crates/obu-node-repl/src/native_pipe/: broker.rs  connection.rs  mod.rs  protocol.rs
crates/obu-node-repl/src/repl_manager/: kernel_state.rs  mod.rs  node_version.rs  runtime_descriptor_lifecycle.rs  spawn.rs  stdio_codec.rs
crates/obu-node-repl/src/trust/: hash_allowlist.rs  local_dev.rs  mod.rs  null.rs
crates/obu-node-repl/tests/: add_module_dir.rs  basic_exec.rs  description_snapshot.rs  descriptor_vocab_contract.rs  discover_backends.rs  display_streaming.rs  js_reset.rs  mcp_stdio.rs  native_pipe_broker.rs  native_pipe_e2e.rs  native_pipe_handshake_received.rs  native_pipe_protocol.rs  sdk_bootstrap.rs  sdk_discovery.rs  timeout.rs  trust_gate.rs
crates/obu-node-repl/tests/fixtures/sdk-bad/: package.json
crates/obu-node-repl/tests/snapshots/: description_snapshot__agent_browser_mcp_usage_fast_work_rules.snap  description_snapshot__agent_install_prompt_closeout_rules.snap  description_snapshot__agent_install_prompt_fast_path_rules.snap  description_snapshot__js_tool_description.snap
crates/obu-wire/: Cargo.toml
crates/obu-wire/src/: envelope.rs  error.rs  error_codes.generated.rs  frame.rs  lib.rs  runtime_dir.rs  version.rs
crates/obu-wire/tests/: envelope_roundtrip.rs  error_codes.rs  frame_roundtrip.rs  runtime_dir.rs  version_handshake.rs
docs/: agent-action-observation-runtime-plan.md  agent-adapters.md  agent-browser-environment-lifecycle-goal.md  agent-browser-mcp-usage.md  agent-environment-product-logic-and-optimization.md  agent-setup-state-closure.md  chrome-web-store-readiness.md  chrome-web-store-review-pack.md  current-product-architecture.md  install.md  native-host-recovery-ux.md  release-checklist.md  runtime-descriptor.md  state-machine-architecture-review-findings.md  state-machine-lifecycle-protocol-completeness-review.md  state-machine-state-space-lifecycle-gap-analysis.md  troubleshooting.md  wire-protocol.md
(+60 files in other folders)
