[package]
name = "obu-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Per-session broker daemon: routes JSON-RPC between the agent SDK and a browser backend."

[[bin]]
name = "obu-host"
path = "src/main.rs"

[dependencies]
obu-wire = { path = "../obu-wire" }

tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "process"] }
