[package]
name = "obu-node-repl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Per-session MCP server: runs JavaScript in a managed Node child."

[[bin]]
name = "obu-node-repl"
path = "src/main.rs"

[dependencies]
obu-wire = { path = "../obu-wire" }

tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
which = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
tokio = { workspace = true, features = ["macros", "process"] }
