[package]
name = "obu-wire"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared section 3.3 JSON-RPC + framing types for the open-browser-use stack."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
